fixed text overflow bug from sidebar

--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -27,6 +27,10 @@
 @media (max-width: 769px) {
     .toolbar h1 {
         margin-left: 3rem;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 40vw;
     }
 }
 
